--- a/.github/workflows/slate-builder-action.yml
+++ b/.github/workflows/slate-builder-action.yml
@@ -1,18 +1,16 @@
-on: push
+on:
+  push:
+    branches: [ master ]
+    tags:
+      - v1.*
+
 name: Create Slate Documentation on Push
+
 jobs:
   action-filter:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@master
-      - name: action-filter
-        uses: actions/bin/filter@master
-        with:
-          args: branch master
-      - name: files-filter
-        uses: wcchristian/gh-pattern-filter-action@master
-        with:
-          args: .*\\.md$
+      - uses: actions/checkout@v2
       - name: Build documentation
         uses: docker://decathlon/slate-builder-action:2.0.0
         env:
