--- a/.github/workflows/slate-builder-action.yml
+++ b/.github/workflows/slate-builder-action.yml
@@ -19,4 +19,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: maxheld83/ghpages@v0.3.0
         env:
+          GH_PAT: ${{ secrets.GH_PAT }}
           BUILD_DIR: docs/build/
