fix: fix cnpjNumber path parameter

--- a/swagger/open_life_welfare.yaml
+++ b/swagger/open_life_welfare.yaml
@@ -14,7 +14,7 @@ servers:
 tags:
 - name: "life-pension"
 paths:
-  /life-pension:
+  /life-pension/{cnpjNumber}:
     get:
       tags:
         - life-pension
@@ -30,6 +30,7 @@ paths:
         - $ref: "#/components/parameters/x-Frame-Options"
         - $ref: "#/components/parameters/page"
         - $ref: "#/components/parameters/pageSize"
+        - $ref: "#/components/parameters/cnpjNumber"
       responses:
         '200':
           description: Dados dos produtos de Vida e Previdência
