fix: add missing description field

--- a/swagger/open_residence.yaml
+++ b/swagger/open_residence.yaml
@@ -60,6 +60,7 @@ components:
   schemas:
     ResponseHomeInsuranceList:
       type: object
+      description: ''
       required:
         - data
         - links
