--- a/swagger/open_welfare.yaml
+++ b/swagger/open_welfare.yaml
@@ -75,6 +75,7 @@ paths:
 components:
   schemas:
     ResponsePensionPlanList:
+      description: ''
       type: object
       required:
         - data
