--- a/swagger/open_people.yaml
+++ b/swagger/open_people.yaml
@@ -61,6 +61,7 @@ paths:
 components:
   schemas:
     ResponsePersonList:
+      description: ''
       type: object
       required:
         - data
