--- a/swagger/open_vehicle.yaml
+++ b/swagger/open_vehicle.yaml
@@ -61,6 +61,7 @@ paths:
 components:
   schemas:
     ResponseAutoInsuranceList:
+      description: ''
       type: object
       required:
         - data
