fix: add missing description field

--- a/swagger/open_life_welfare.yaml
+++ b/swagger/open_life_welfare.yaml
@@ -59,6 +59,7 @@ paths:
 components:
   schemas:
     ResponseLifePensionList:
+      description: ''
       type: object
       required:
         - data
