--- a/swagger/open_residence.yaml
+++ b/swagger/open_residence.yaml
@@ -55,7 +55,11 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerError'
         default:
-          $ref: '#/components/schemas/ResponseHomeInsuranceList'
+          description: ''
+          content:
+            application/json:
+              schema:
+                  $ref: '#/components/schemas/ResponseHomeInsuranceList'
 components:
   schemas:
     ResponseHomeInsuranceList:
