--- a/swagger/open_people.yaml
+++ b/swagger/open_people.yaml
@@ -57,7 +57,11 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerError'
         default:
-          $ref: '#/components/schemas/ResponsePersonList'
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponsePersonList'
 components:
   schemas:
     ResponsePersonList:
