--- a/swagger/open_vehicle.yaml
+++ b/swagger/open_vehicle.yaml
@@ -57,7 +57,11 @@ paths:
         '500':
           $ref: '#/components/responses/InternalServerError'
         default:
-          $ref: '#/components/schemas/ResponseAutoInsuranceList'
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseAutoInsuranceList'
 components:
   schemas:
     ResponseAutoInsuranceList:
