fix: fix contact info

--- a/swagger/open_people.yaml
+++ b/swagger/open_people.yaml
@@ -7,7 +7,7 @@ info:
     do manual de escopo de dados.
   version: 1.0.0
   contact:
-    url: 'https://http://novosite.susep.gov.br'
+    url: 'https://openinsurance.susep.gov.br'
 servers:
   - url: 'https://api.organizacao.com.br/open-insurance/products-services/v1'
     description: Servidor de Produção
