--- a/swagger/open_people.yaml
+++ b/swagger/open_people.yaml
@@ -16,7 +16,7 @@ servers:
 tags:
   - name: person
 paths:
-  /person/{cnpjNumber}:
+  /person:
     get:
       tags:
         - person
@@ -32,7 +32,6 @@ paths:
         - $ref: '#/components/parameters/x-Frame-Options'
         - $ref: '#/components/parameters/page'
         - $ref: '#/components/parameters/pageSize'
-        - $ref: '#/components/parameters/cnpjNumber'
       responses:
         '200':
           description: Dados dos Plano de Seguro de Pessoas
@@ -1016,13 +1015,6 @@ components:
         type: integer
         default: 10
         minimum: 1
-    cnpjNumber:
-      name: cnpjNumber
-      in: path
-      description: Número de CNPJ.
-      required: true
-      schema:
-        type: string
     cache-Control:
       name: cache-control
       in: header
