--- a/swagger/open_welfare.yaml
+++ b/swagger/open_welfare.yaml
@@ -14,7 +14,7 @@ servers:
 tags:
 - name: "pension-plan"
 paths:
-  /pension-plan/{cnpjNumber}:
+  /pension-plan:
     get:
       tags:
         - pension-plan
@@ -30,7 +30,6 @@ paths:
         - $ref: "#/components/parameters/x-Frame-Options"
         - $ref: "#/components/parameters/page"
         - $ref: "#/components/parameters/pageSize"
-        - $ref: "#/components/parameters/cnpjNumber"
       responses:
         '200':
           description: Dados dos Plano de Previdência com cobertura de risco
@@ -594,13 +593,6 @@ components:
         type: integer
         default: 10
         minimum: 1
-    cnpjNumber:
-      name: cnpjNumber
-      in: path
-      description: Número de CNPJ.
-      required: true
-      schema:
-        type: string
     cache-Control:
       name: cache-control
       in: header
