fix: build, validate action and Makefile

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
 name: Deploy Documentation
 
 jobs:
-  docs-build:
+  deploy:
     runs-on: ubuntu-latest
 
     defaults:
@@ -33,10 +33,8 @@ jobs:
         with:
           node-version: '12'
 
-      - run: npm install -g @apidevtools/swagger-cli
       - run: npm install -g widdershins
 
-      - run: swagger-cli validate source/swagger/open_data_status_outage.yaml
       - run: widdershins \
           "source/swagger/open_data_status_outage.yaml" \
           -o source/includes/partials_common_apis/_get_status_and_outages.md.erb \
@@ -44,13 +42,9 @@ jobs:
           --omitHeader --summary --httpsnippet
 
       # Fase 1
-      - run: swagger-cli validate source/swagger/open_data_channels.yaml
-      - run: swagger-cli validate source/swagger/open_data_products_services.yaml
-      - run: swagger-cli validate source/swagger/open_data_status_outage.yaml
       - run: widdershins \
           "source/swagger/open_data_channels.yaml" \
           "source/swagger/open_data_products_services.yaml" \
-          "source/swagger/open_data_status_outage.yaml" \
           -o source/includes/partials_open_insurance/_open_insurance_fase1_apis.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
@@ -63,10 +57,6 @@ jobs:
       - run: bundle config set deployment 'true'
       - run: bundle install
       - run: bundle exec middleman build
-
-      - uses: stoplightio/spectral-action@v0.8.1
-        with:
-          file_glob: 'documentation/source/swagger/*.yaml'
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
