--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 on:
   push:
-    tags:
-      - v1.*
+    branches:
+      - 'master'
 
-name: Deploy Documentation
+name: Deploy
 
 jobs:
   deploy:
@@ -36,6 +36,12 @@ jobs:
       - run: npm install -g widdershins
 
       - run: widdershins \
+          "source/swagger/open_admin_metrics.yaml" \
+          -o source/includes/partials_common_apis/_open_admin_metrics.md.erb \
+          --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
+          --omitHeader --summary --httpsnippet
+
+      - run: widdershins \
           "source/swagger/open_data_status_outage.yaml" \
           -o source/includes/partials_common_apis/_get_status_and_outages.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
@@ -44,8 +50,43 @@ jobs:
       # Fase 1
       - run: widdershins \
           "source/swagger/open_data_channels.yaml" \
-          "source/swagger/open_data_products_services.yaml" \
-          -o source/includes/partials_open_insurance/_open_insurance_fase1_apis.md.erb \
+          -o source/includes/partials_open_insurance/_open_data_channels.md.erb \
+          --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
+          --omitHeader --summary --httpsnippet
+
+      - run: widdershins \
+          "source/swagger/open_life_welfare.yaml" \
+          -o source/includes/partials_open_insurance/_open_life_welfare.md.erb \
+          --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
+          --omitHeader --summary --httpsnippet
+
+      - run: widdershins \
+          "source/swagger/open_people.yaml" \
+          -o source/includes/partials_open_insurance/open_people.md.erb \
+          --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
+          --omitHeader --summary --httpsnippet
+
+      - run: widdershins \
+          "source/swagger/open_price_linked_bonds.yaml" \
+          -o source/includes/partials_open_insurance/_open_price_linked_bonds.md.erb \
+          --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
+          --omitHeader --summary --httpsnippet
+
+      - run: widdershins \
+          "source/swagger/open_residence.yaml" \
+          -o source/includes/partials_open_insurance/_open_residence.md.erb \
+          --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
+          --omitHeader --summary --httpsnippet
+
+      - run: widdershins \
+          "source/swagger/open_vehicle.yaml" \
+          -o source/includes/partials_open_insurance/_open_vehicle.md.erb \
+          --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
+          --omitHeader --summary --httpsnippet
+
+      - run: widdershins \
+          "source/swagger/open_welfare.yaml" \
+          -o source/includes/partials_open_insurance/_open_welfare.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
