--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        ruby-version: [2.5, 2.6, 2.7, 3.0]
+        ruby-version: [3.0]
 
     steps:
       - uses: actions/checkout@v2
@@ -38,56 +38,56 @@ jobs:
       - run: mkdir source/includes/partials_common_apis && mkdir source/includes/partials_open_insurance
 
       - run: widdershins \
-          "source/swagger/open_admin_metrics.yaml" \
+          source/swagger/open_admin_metrics.yaml \
           -o source/includes/partials_common_apis/_open_admin_metrics.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
       - run: widdershins \
-          "source/swagger/open_data_status_outage.yaml" \
+          source/swagger/open_data_status_outage.yaml \
           -o source/includes/partials_common_apis/_get_status_and_outages.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
       # Fase 1
       - run: widdershins \
-          "source/swagger/open_data_channels.yaml" \
+          source/swagger/open_data_channels.yaml \
           -o source/includes/partials_open_insurance/_open_data_channels.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
       - run: widdershins \
-          "source/swagger/open_life_welfare.yaml" \
+          source/swagger/open_life_welfare.yaml \
           -o source/includes/partials_open_insurance/_open_life_welfare.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
       - run: widdershins \
-          "source/swagger/open_people.yaml" \
+          source/swagger/open_people.yaml \
           -o source/includes/partials_open_insurance/open_people.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
       - run: widdershins \
-          "source/swagger/open_price_linked_bonds.yaml" \
+          source/swagger/open_price_linked_bonds.yaml \
           -o source/includes/partials_open_insurance/_open_price_linked_bonds.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
       - run: widdershins \
-          "source/swagger/open_residence.yaml" \
+          source/swagger/open_residence.yaml \
           -o source/includes/partials_open_insurance/_open_residence.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
       - run: widdershins \
-          "source/swagger/open_vehicle.yaml" \
+          source/swagger/open_vehicle.yaml \
           -o source/includes/partials_open_insurance/_open_vehicle.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
       - run: widdershins \
-          "source/swagger/open_welfare.yaml" \
+          source/swagger/open_welfare.yaml \
           -o source/includes/partials_open_insurance/_open_welfare.md.erb \
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
