--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        ruby-version: [2.5, 2.6, 2.7, 3.0]
+        ruby-version: [3.0]
 
     steps:
       - uses: actions/checkout@v2
@@ -38,6 +38,7 @@ jobs:
           node-version: '12'
 
       - run: npm install -g @apidevtools/swagger-cli
+
       - run: swagger-cli validate source/swagger/open_admin_metrics.yaml
       - run: swagger-cli validate source/swagger/open_data_status_outage.yaml
 
