--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,13 +83,19 @@ jobs:
           --language_tabs "javascript:JavaScript:request" "python:Python:request" "java:Java::request" \
           --omitHeader --summary --httpsnippet
 
-      - uses: actions/cache@v1
+      - uses: actions/cache@v2
         with:
-          path: build
-          key: ${{ runner.os }}-${{ hashFiles('**/source') }}
+          path: vendor/bundle
+          key: gems-${{ runner.os }}-${{ matrix.ruby-version }}-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            gems-${{ runner.os }}-${{ matrix.ruby-version }}-
+            gems-${{ runner.os }}-
 
-      - run: bundle config set deployment 'true'
-      - run: bundle install
+      - name: bundle install
+        run: |
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
+
       - run: bundle exec middleman build
 
       - name: Deploy
